Grid implementation completed